--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,9 @@ input[type="checkbox"]:checked + .checkmark > span:before {
   margin: 0;
   padding: 0; }
 
+html {
+  scroll-behavior: smooth; }
+
 body {
   line-height: 1.5;
   font-weight: 400;
@@ -696,6 +699,8 @@ table {
     .header-navbar-link li > ul > li {
       position: relative;
       padding-bottom: 35px; }
+      .header-navbar-link li > ul > li:last-child {
+        padding-bottom: 0; }
     .header-navbar-link li > a {
       font-size: 14px; }
     .header-navbar-link li > a::after {
@@ -2015,7 +2020,8 @@ table {
                 .footer-box-contents .input-list .input-close .three-dots .popup-face p:hover {
                   background-color: rgba(0, 0, 0, 0.05); }
       .footer-box-contents .input-img img {
-        max-width: 86px; }
+        max-width: 86px;
+        height: auto; }
       .footer-box-contents .input-chat {
         display: -webkit-flex;
         display: -moz-flex;
@@ -2946,7 +2952,7 @@ input::-webkit-input-placeholder {
           opacity: 1; }
 
 .news-inner {
-  padding-top: 135px; }
+  padding-top: 95px; }
   .news-inner-row {
     display: -webkit-flex;
     display: -moz-flex;
@@ -2962,6 +2968,20 @@ input::-webkit-input-placeholder {
       @media screen and (max-width: 1023px) {
         .news-inner-row .news-list {
           padding-right: 0; } }
+      .news-inner-row .news-list .news-breadcrumb {
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px; }
+        .news-inner-row .news-list .news-breadcrumb > a span {
+          color: #1665d8;
+          font-size: 20px; }
+        .news-inner-row .news-list .news-breadcrumb > p {
+          font-size: 20px;
+          color: #544837; }
       .news-inner-row .news-list > a {
         display: -webkit-flex;
         display: -moz-flex;
@@ -2970,21 +2990,43 @@ input::-webkit-input-placeholder {
         display: flex;
         align-items: center;
         padding-bottom: 40px; }
-      .news-inner-row .news-list > a > i {
-        padding: 12px 0.976rem;
-        border-radius: 50%;
-        background: #f8f8f8;
-        margin-right: 20px;
-        color: #174ae6; }
+      .news-inner-row .news-list .news-table {
+        background-color: #fafafa;
+        padding: 15px;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap; }
+        .news-inner-row .news-list .news-table .btn-toggle {
+          font-style: italic;
+          cursor: pointer; }
+          .news-inner-row .news-list .news-table .btn-toggle span {
+            color: #1665d8; }
+        .news-inner-row .news-list .news-table p {
+          font-size: 16px;
+          font-weight: 600;
+          margin-right: 10px; }
+        .news-inner-row .news-list .news-table.active .news-text {
+          display: block; }
+        .news-inner-row .news-list .news-table .news-text {
+          display: none;
+          width: 100%;
+          padding-top: 8px; }
+          .news-inner-row .news-list .news-table .news-text p {
+            font-weight: 400;
+            font-size: 12px; }
       .news-inner-row .news-list > a > p {
         font-size: 26px; }
         @media screen and (max-width: 650px) {
           .news-inner-row .news-list > a > p {
             font-size: 18px; } }
       .news-inner-row .news-list > h1 {
-        font-size: 40px;
-        line-height: 50px;
-        color: #2f281e;
+        font-size: 32px;
+        line-height: 40px;
+        color: #544837;
         padding-bottom: 20px; }
         @media screen and (max-width: 650px) {
           .news-inner-row .news-list > h1 {
@@ -2996,17 +3038,17 @@ input::-webkit-input-placeholder {
         @media screen and (max-width: 650px) {
           .news-inner-row .news-list > p {
             font-size: 12px; } }
-      .news-inner-row .news-list > p:nth-child(4) {
-        font-size: 20px;
-        line-height: 32px; }
-        .news-inner-row .news-list > p:nth-child(4) > span {
-          font-weight: 600; }
-        @media screen and (max-width: 650px) {
-          .news-inner-row .news-list > p:nth-child(4) {
-            font-size: 15px; } }
+      .news-inner-row .news-list > p:nth-child(4) > span {
+        font-size: 16px;
+        line-height: 22px;
+        font-weight: 600;
+        color: #544837; }
+      @media screen and (max-width: 650px) {
+        .news-inner-row .news-list > p:nth-child(4) {
+          font-size: 15px; } }
       .news-inner-row .news-list > img {
         padding-bottom: 20px; }
-      .news-inner-row .news-list > a:nth-child(5) {
+      .news-inner-row .news-list > a.list-link {
         color: #174ae6;
         font-style: italic;
         font-size: 16px;
@@ -3028,7 +3070,6 @@ input::-webkit-input-placeholder {
           color: #174ae6;
           padding: 4px 12px;
           border-radius: 5px;
-          margin-right: 30px;
           background: rgba(23, 74, 230, 0.1); }
         .news-inner-row .news-list .news-time p:nth-child(2) {
           font-style: italic; }
@@ -3042,9 +3083,17 @@ input::-webkit-input-placeholder {
         padding: 15px 0;
         border-bottom: 1px solid #cfcfcf; }
         .news-inner-row .news-list .list-share .text {
-          margin-right: 20px; }
+          width: 10%; }
           .news-inner-row .news-list .list-share .text p {
             color: #858585; }
+        .news-inner-row .news-list .list-share .list-box {
+          width: 90%;
+          display: -webkit-flex;
+          display: -moz-flex;
+          display: -ms-flex;
+          display: -o-flex;
+          display: flex;
+          align-items: center; }
         .news-inner-row .news-list .list-share .icon {
           display: -webkit-flex;
           display: -moz-flex;
@@ -3052,9 +3101,35 @@ input::-webkit-input-placeholder {
           display: -o-flex;
           display: flex;
           align-items: center;
-          gap: 20px; }
+          gap: 20px;
+          width: 40%; }
           .news-inner-row .news-list .list-share .icon img {
             max-width: 30px; }
+        .news-inner-row .news-list .list-share .popup-register {
+          width: 60%; }
+          .news-inner-row .news-list .list-share .popup-register a {
+            width: 100%; }
+            .news-inner-row .news-list .list-share .popup-register a p {
+              border-radius: 4px;
+              padding: 10px 0;
+              text-align: center;
+              color: #fff;
+              font-size: 14px;
+              background-color: #184ae6; }
+          .news-inner-row .news-list .list-share .popup-register .overlay {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(25, 25, 30, 0.5);
+            transition: opacity 500ms;
+            visibility: hidden;
+            opacity: 0;
+            z-index: 999; }
+            .news-inner-row .news-list .list-share .popup-register .overlay:target {
+              visibility: visible;
+              opacity: 1; }
       .news-inner-row .news-list .list-tag {
         display: -webkit-flex;
         display: -moz-flex;
@@ -3280,21 +3355,6 @@ input::-webkit-input-placeholder {
             max-width: 80px; }
           .news-inner-col:nth-child(2) .news-item .news-fanpage .fanpage-interact-like > a > p {
             margin-left: 4px; }
-      .news-inner-col:nth-child(2) .news-item .news-video {
-        padding: 10px;
-        margin-bottom: 20px;
-        background: #f5f6f7; }
-        .news-inner-col:nth-child(2) .news-item .news-video .video-list {
-          padding: 15px;
-          background-color: #fff; }
-          .news-inner-col:nth-child(2) .news-item .news-video .video-list p:nth-child(1) {
-            font-weight: 700;
-            text-transform: uppercase; }
-          .news-inner-col:nth-child(2) .news-item .news-video .video-list p:nth-child(2) {
-            display: -webkit-box;
-            -webkit-line-clamp: 6;
-            -webkit-box-orient: vertical;
-            overflow: hidden; }
       .news-inner-col:nth-child(2) .news-item .news-posts h4 {
         font-size: 20px;
         font-weight: 600;
