--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -225,7 +225,7 @@
               & p {
                 padding: 8px;
                 border-radius: 8px;
-                &:hover{
+                &:hover {
                   background-color: rgba(0, 0, 0, 0.05);
                 }
               }
@@ -236,6 +236,7 @@
       & .input-img {
         img {
           max-width: 86px;
+          height: auto;
         }
       }
       & .input-chat {
