--- a/scss/layout/_news.scss
+++ b/scss/layout/_news.scss
@@ -1,6 +1,6 @@
 .news {
   &-inner {
-    padding-top: 135px;
+    padding-top: 95px;
     &-row {
       @include flex();
       padding: 0 20px;
@@ -12,18 +12,66 @@
         @include max(1023px) {
           padding-right: 0;
         }
+        & .news-breadcrumb {
+          @include flex();
+          align-items: center;
+          margin-bottom: 30px;
+          > a {
+            span {
+              color: #1665d8;
+              font-size: 20px;
+            }
+          }
+          > p {
+            font-size: 20px;
+            color: #544837;
+          }
+        }
         > a {
           @include flex();
           align-items: center;
           padding-bottom: 40px;
         }
-        > a > i {
-          padding: 12px 0.976rem;
-          border-radius: 50%;
-          background: #f8f8f8;
-          margin-right: 20px;
-          color: $color-first;
+        & .news-table {
+          background-color: #fafafa;
+          padding: 15px;
+          @include flex();
+          align-items: center;
+          flex-wrap: wrap;
+          & .btn-toggle {
+            font-style: italic;
+            cursor: pointer;
+            span {
+              color: #1665d8;
+            }
+          }
+          p {
+            font-size: 16px;
+            font-weight: 600;
+            margin-right: 10px;
+          }
+          &.active {
+            & .news-text {
+              display: block;
+            }
+          }
+          & .news-text {
+            display: none;
+            width: 100%;
+            padding-top: 8px;
+            p {
+              font-weight: 400;
+              font-size: 12px;
+            }
+          }
         }
+        // > a > i {
+        //   padding: 12px 0.976rem;
+        //   border-radius: 50%;
+        //   background: #f8f8f8;
+        //   margin-right: 20px;
+        //   color: $color-first;
+        // }
         > a > p {
           font-size: 26px;
           @include max(650px) {
@@ -31,9 +79,9 @@
           }
         }
         > h1 {
-          font-size: 40px;
-          line-height: 50px;
-          color: #2f281e;
+          font-size: 32px;
+          line-height: 40px;
+          color: #544837;
           padding-bottom: 20px;
           @include max(650px) {
             font-size: 30px;
@@ -48,10 +96,11 @@
           }
         }
         > p:nth-child(4) {
-          font-size: 20px;
-          line-height: 32px;
           > span {
+            font-size: 16px;
+            line-height: 22px;
             font-weight: 600;
+            color: #544837;
           }
           @include max(650px) {
             font-size: 15px;
@@ -60,7 +109,7 @@
         > img {
           padding-bottom: 20px;
         }
-        > a:nth-child(5) {
+        > a.list-link {
           color: $color-first;
           font-style: italic;
           font-size: 16px;
@@ -81,7 +130,6 @@
             color: $color-first;
             padding: 4px 12px;
             border-radius: 5px;
-            margin-right: 30px;
             background: rgba(23, 74, 230, 0.1);
           }
           p:nth-child(2) {
@@ -94,17 +142,53 @@
           padding: 15px 0;
           border-bottom: 1px solid #cfcfcf;
           & .text {
-            margin-right: 20px;
+            width: 10%;
             p {
               color: #858585;
             }
+          }
+          & .list-box {
+            width: 90%;
+            @include flex();
+            align-items: center;
           }
           & .icon {
             @include flex();
             align-items: center;
             gap: 20px;
+            width: 40%;
             img {
               max-width: 30px;
+            }
+          }
+          & .popup-register {
+            width: 60%;
+            a {
+              width: 100%;
+              p {
+                border-radius: 4px;
+                padding: 10px 0;
+                text-align: center;
+                color: #fff;
+                font-size: 14px;
+                background-color: #184ae6;
+              }
+            }
+            & .overlay {
+              position: fixed;
+              top: 0;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              background: rgba(25, 25, 30, 0.5);
+              transition: opacity 500ms;
+              visibility: hidden;
+              opacity: 0;
+              z-index: 999;
+              &:target {
+                visibility: visible;
+                opacity: 1;
+              }
             }
           }
         }
@@ -376,24 +460,7 @@
               }
             }
           }
-          & .news-video {
-            padding: 10px;
-            margin-bottom: 20px;
-            background: #f5f6f7;
-            & .video-list {
-              padding: 15px;
-              background-color: #fff;
-              p {
-                &:nth-child(1) {
-                  font-weight: 700;
-                  text-transform: uppercase;
-                }
-                &:nth-child(2) {
-                  @include lc(6);
-                }
-              }
-            }
-          }
+
           & .news-posts {
             h4 {
               font-size: 20px;
