--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -70,7 +70,7 @@
       //   content: "\e906";
       // }
       .ic-down {
-        top: 0;
+        top: 2px;
         right: -35px;
         padding: 8px;
         display: block;
