--- a/scss/layout/_tab.scss
+++ b/scss/layout/_tab.scss
@@ -507,6 +507,12 @@
           background: #ffffff;
           border: 1px solid #d9d9d9;
           border-radius: 6px;
+          > a.selected {
+            color: #fff;
+          }
+          > a.selected::before {
+            display: none;
+          }
           @include max(700px) {
             padding: 4px 8px;
           }
