--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -195,6 +195,7 @@
               border-radius: 4px;
               padding: 6px 15px;
               font-size: 16px;
+              margin-top: 8px;
               border: 0.8px solid #e8e8e8;
             }
             > textarea {
