--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -21,9 +21,16 @@
     }
   }
   &-img {
-    width: 8.125rem;
-    display: block;
     position: relative;
+    @include max(1100px) {
+      width: 100%;
+      height: auto;
+    }
+    img {
+      max-width: 8.125rem;
+      width: 100%;
+      height: auto;
+    }
   }
   &-filter {
     @include flex();
@@ -51,12 +58,25 @@
         flex-direction: column;
         gap: 1.5rem;
         padding-top: 1rem;
+        align-items: baseline;
       }
       > li {
         position: relative;
+        @include max(1100px) {
+          width: 100%;
+        }
         & .item-box {
-          & a:hover {
-            color: #002485;
+          @include max(1100px) {
+            @include flex();
+          }
+
+          & a {
+            @include max(1100px) {
+              width: 100%;
+            }
+            &:hover {
+              color: #002485;
+            }
           }
           &:hover i.ic-down::before {
             content: "\e906";
@@ -76,6 +96,10 @@
         display: block;
         height: 100%;
         position: absolute;
+        @include max(1100px) {
+          position: unset;
+          padding: 8px 20px;
+        }
         &::before {
           font-size: 6px;
           display: block;
@@ -92,16 +116,32 @@
         padding: 20px;
         border-top: 4px solid #002485;
         box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.14);
+        @include max(1100px) {
+          position: unset;
+          width: 100%;
+        }
       }
       li > ul.item-product {
         width: 740px;
         @include max(1536px) {
           left: -230px;
         }
+        @include max(1100px) {
+          width: 100%;
+          height: 250px;
+          position: unset;
+        }
+        @include max(640px) {
+          height: 100%;
+        }
         > li {
           width: 50%;
           float: left;
           padding: 0;
+          @include max(640px) {
+            width: 100%;
+            float: none;
+          }
           &:nth-child(1) {
             > ul > li > a > {
               font-size: 16px;
@@ -161,6 +201,9 @@
           box-shadow: unset;
           top: 0;
           padding: 0;
+          @include max(640px) {
+            padding-bottom: 35px;
+          }
           > li {
             @include flex();
             align-items: center;
@@ -173,6 +216,10 @@
       }
       & .menu-dropdown-icon:nth-child(2) ul {
         width: 295px;
+        @include max(1100px) {
+          width: 100%;
+          position: unset;
+        }
       }
       li > ul > li {
         position: relative;
@@ -276,6 +323,9 @@
     &-phone {
       .ic-phone {
         padding-right: 25px;
+        @include max(640px) {
+          padding-right: 0;
+        }
         &:before {
           font-size: 18px;
           color: #2073ff;
@@ -324,6 +374,7 @@
       @include max(68.75rem) {
         right: -1.375rem;
         width: 100%;
+        top: 30px;
       }
       &::before {
         content: "";
@@ -360,6 +411,7 @@
       }
       @include max(40rem) {
         width: 100%;
+        margin-bottom: 20px;
       }
       a {
         padding: 8px 30px;
