--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -26,10 +26,14 @@
       width: 100%;
       height: auto;
     }
+    a {
+      max-width: 130px;
+      display: block;
+      object-fit: cover;
+    }
     img {
-      max-width: 8.125rem;
-      width: 100%;
-      height: auto;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   &-filter {
@@ -89,7 +93,7 @@
       //   content: "\e906";
       // }
       .ic-down {
-        top: 2px;
+        top: 0;
         right: -35px;
         padding: 8px;
         display: block;
@@ -263,13 +267,21 @@
     &-language {
       padding: 1.25rem 0;
       margin-right: 16px;
-      max-width: 1.875rem;
+
       @include max(68.75rem) {
         margin: unset;
         width: 5%;
       }
       @include max(40rem) {
         width: 10%;
+      }
+      a {
+        max-width: 1.875rem;
+        display: block;
+        img {
+          max-width: 100%;
+          max-height: 100%;
+        }
       }
     }
     &-search {
@@ -426,12 +438,5 @@
         background: linear-gradient(217deg, #0262e9 0%, #0054ae 100%);
       }
     }
-  }
-}
-
-@supports (-webkit-overflow-scrolling: touch) {
-  /* CSS specific to iOS devices */ 
-  .header-box{
-    height: 100px;
   }
 }
