--- a/scss/layout/_solution.scss
+++ b/scss/layout/_solution.scss
@@ -1,29 +1,33 @@
 .solution {
-  background: linear-gradient(0deg, #ffffff 12.61%, #eff5ff 61.07%);
+  background: linear-gradient(0deg, #ffffff -35%, #eef6ff 100%);
   &-inner {
-    padding-top: 7.5rem;
-    padding-bottom: 11.875rem;
+    padding-top: 100px;
+    padding-bottom: 120px;
     @include max(1023px) {
       padding-bottom: 5.875rem;
     }
     &-title {
-      padding-bottom: 1.25rem;
+      padding-bottom: 50px;
       text-align: center;
       h2 {
-        font-size: 2.25rem;
-        color: $color-first;
+        font-size: 28px;
+        color: #0060ff;
         text-transform: uppercase;
-        padding-bottom: 1.25rem;
+        padding-bottom: 20px;
         @include max(768px) {
           font-size: 28px;
         }
         @include max(600px) {
           font-size: 20px;
         }
+        span {
+          color: #1d3a89;
+        }
       }
       p {
-        font-size: 1.625rem;
-        line-height: 1.5;
+        font-size: 24px;
+        line-height: 34px;
+        color: #262626;
         @include max(768px) {
           font-size: 18px;
         }
@@ -39,120 +43,104 @@
     }
     &-dpm {
       width: 100%;
+      height: 100%;
       @include flex();
       align-items: center;
       position: relative;
       flex-direction: column;
-      padding: 1.5625rem 0.9375rem;
+      padding: 35px 15px;
       background-color: #ffff;
       border-radius: 1.25rem;
-      aspect-ratio: 1/1.8;
-      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.303027);
-      @include max(1023px) {
-        aspect-ratio: 0;
-      }
+      // aspect-ratio: 1/1.8;
     }
     &-col {
       width: 20%;
-      padding: 0.9375rem;
+      padding: 12px;
       position: relative;
-      border: 1px dashed #a0a0a0;
+      border: 2px dashed #a0a0a0;
       border-left: transparent;
       border-right: transparent;
       @include max(1023px) {
         border: 0;
         width: 100%;
       }
-    }
-    &-col:nth-child(1) {
-      border-bottom: transparent;
-      border-top-right-radius: 1rem;
-      border-top-left-radius: 1rem;
-      border-right: transparent;
-      .solution-inner-content p:nth-child(3) {
-        margin-bottom: 4rem;
-        @include max(1023px) {
-          margin-bottom: 2rem;
-        }
-      }
       img {
         max-width: 45px;
+        max-height: 35px;
       }
-      &::before {
-        content: "";
-        position: absolute;
-        width: 50%;
-        height: 90%;
-        top: 0;
-        left: 0;
-        border-left: 1px dashed #a0a0a0;
-        border-bottom: 1px dashed #a0a0a0;
-        border-bottom-left-radius: 16px;
-        border-top-left-radius: 16px;
-        @include max(1100px) {
-          height: 93%;
+    }
+    &-col {
+      &:nth-child(1) {
+        border-bottom: transparent;
+        border-top-right-radius: 14px;
+        border-top-left-radius: 18px;
+        border-right: transparent;
+        &::before {
+          content: "";
+          position: absolute;
+          width: 50%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          border-left: 2px dashed #a0a0a0;
+          border-bottom: 2px dashed #a0a0a0;
+          border-bottom-left-radius: 12px;
+          border-top-left-radius: 16px;
+          @include max(1100px) {
+            height: 93%;
+          }
+          @include max(1083px) {
+            height: 97%;
+          }
+          @include max(1023px) {
+            display: none;
+          }
         }
-        @include max(1083px) {
-          height: 97%;
-        }
-        @include max(1023px) {
-          display: none;
+        &::after {
+          content: "";
+          position: absolute;
+          width: 50%;
+          height: 110%;
+          top: 0;
+          right: 0;
+          border-right: 2px dashed #a0a0a0;
+          border-top-right-radius: 10px;
         }
       }
     }
     &-col:nth-child(2) {
-      border-top: transparent;
-      border-left: transparent;
-      border-bottom-left-radius: 16px;
-      border-bottom-right-radius: 16px;
-      .solution-inner-content h3 {
-        color: #ffc107;
+      border: 0;
+      .solution-inner-icon {
+        padding: 1.25rem 1.5rem;
       }
       &::before {
         content: "";
         position: absolute;
-        border-left: 1px dashed #a0a0a0;
         width: 100%;
-        height: 97%;
-        bottom: 0;
+        height: 100%;
+        bottom: -50px;
         left: 0;
-        border-bottom-left-radius: 16px;
-        @include max(1023px) {
-          display: none;
-        }
-      }
-      img {
-        max-width: 31px;
-      }
-      .solution-inner-icon {
-        padding: 1.25rem 1.5rem;
+        border: 2px dashed #a0a0a0;
+        border-top: transparent;
+        border-left: transparent;
+        border-right: transparent;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
       }
     }
     &-col:nth-child(3) {
       border-bottom: transparent;
       border-top-left-radius: 16px;
       border-top-right-radius: 16px;
-      img {
-        max-width: 45px;
-      }
-      .solution-inner-content p:nth-child(3) {
-        margin-bottom: 5.3rem;
-        @include max(1023px) {
-          margin-bottom: 2rem;
-        }
-      }
-      .solution-inner-content h3 {
-        color: #00c86b;
-      }
       &::before {
         content: "";
         position: absolute;
         width: 50%;
-        height: 97%;
+        height: 110%;
         top: 0;
         left: 0;
-        border-left: 1px dashed #a0a0a0;
-        border-top-left-radius: 16px;
+        border-left: 2px dashed #a0a0a0;
+        border-top-left-radius: 14px;
         @include max(1023px) {
           display: none;
         }
@@ -161,28 +149,34 @@
         content: "";
         position: absolute;
         width: 50%;
-        height: 97%;
+        height: 110%;
         top: 0;
         right: 0;
-        border-right: 1px dashed #a0a0a0;
-        border-top-right-radius: 16px;
+        border-right: 2px dashed #a0a0a0;
+        border-top-right-radius: 12px;
         @include max(1023px) {
           display: none;
         }
       }
     }
     &-col:nth-child(4) {
-      border-top: transparent;
-      border-bottom-left-radius: 16px;
-      border-bottom-right-radius: 16px;
-      .solution-inner-content h3 {
-        color: #17b4ef;
-      }
-      img {
-        max-width: 2.143125rem;
-      }
+      border: transparent;
       .solution-inner-icon {
         padding: 1.25rem 1.5rem;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        bottom: -50px;
+        left: 0;
+        border: 2px dashed #a0a0a0;
+        border-top: transparent;
+        border-left: transparent;
+        border-right: transparent;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
       }
     }
     &-col:nth-child(5) {
@@ -190,21 +184,15 @@
       border-right: transparent;
       border-top-left-radius: 16px;
       border-top-right-radius: 16px;
-      img {
-        max-width: 40px;
-      }
-      .solution-inner-content h3 {
-        color: #0067aa;
-      }
       &::before {
         content: "";
         position: absolute;
         width: 50%;
-        height: 97%;
+        height: 110%;
         top: 0;
         left: 0;
-        border-top-left-radius: 16px;
-        border-left: 1px dashed #a0a0a0;
+        border-top-left-radius: 14px;
+        border-left: 2px dashed #a0a0a0;
         @include max(1023px) {
           display: none;
         }
@@ -213,12 +201,12 @@
         content: "";
         position: absolute;
         width: 50%;
-        height: 90%;
+        height: 100%;
         top: 0px;
         right: 0px;
         border-top-right-radius: 16px;
-        border-right: 1px dashed rgb(160, 160, 160);
-        border-bottom: 1px dashed rgb(160, 160, 160);
+        border-right: 2px dashed rgb(160, 160, 160);
+        border-bottom: 2px dashed rgb(160, 160, 160);
         border-bottom-right-radius: 16px;
         @include max(1100px) {
           height: 93%;
@@ -240,7 +228,7 @@
         }
       }
       .solution-inner-icon {
-        top: -3.125rem;
+        top: -35px;
         bottom: unset;
         @include max(1100px) {
           top: -3.5rem;
@@ -253,26 +241,16 @@
     }
     &-icon {
       position: absolute;
-      bottom: -3.5rem;
+      bottom: -45px;
       padding: 1.25rem;
       border-radius: 50%;
       z-index: 1;
-      background: radial-gradient(50% 50% at 50% 50%, #ffffff 0%, #c0ebff 100%);
-      // &::before {
-      //   content: "";
-      //   position: absolute;
-      //   width: 60%;
-      //   height: 60%;
-      //   top: 0px;
-      //   left: 0;
-      //   right: 0;
-      //   bottom: 0;
-      //   z-index: -1;
-      //   transform: scale(2);
-      //   background: radial-gradient(50% 50% at 50% 50%, #ffffff 0%, #c0ebff 100%);
-      //   border-radius: 50%;
-      //   margin: auto;
-      // }
+      background: radial-gradient(
+        circle,
+        #ffffff 0%,
+        #e7f7ff 45%,
+        #9adfff 100%
+      );
       &::after {
         content: "";
         animation: pulse 2.5s infinite;
@@ -295,30 +273,24 @@
       text-align: center;
       line-height: 1.5;
       h3 {
-        font-size: 1.5rem;
-        color: #3e57b4;
-        padding-bottom: 0.375rem;
+        font-size: 26px;
+        color: #1665d8;
+        margin-bottom: 8px;
       }
       p {
-        font-weight: 700;
-        padding-bottom: 1.25rem;
+        font-weight: 400;
+        color: #1665d8;
+        font-size: 14px;
+        font-style: italic;
+        margin-bottom: 30px;
+        line-height: 18px;
       }
       p:nth-child(3) {
         color: #858585;
         font-weight: 400;
-        margin-bottom: 2.2rem;
-        padding: 0;
-        font-size: 14px;
-      }
-      .view-detail {
-        a {
-          position: relative;
-          z-index: 2;
-          color: $color-first;
-          font-size: 14px;
-          font-style: italic;
-          text-decoration: underline;
-        }
+        font-style: normal;
+        line-height: 18px;
+        margin-bottom: 0;
       }
     }
   }
