--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -3,56 +3,213 @@
     padding-top: 70px;
   }
   &-inner {
-    .swiper {
-      width: 100%;
-      height: 100%;
-      &-slide {
-        flex-shrink: 0;
-        width: 100%;
+    & .slide-two {
+      & .banner-list {
         height: 100%;
-        &.slide-two {
-          .banner-content-title {
-            .animation-title {
-              position: absolute;
-              bottom: 10%;
-              left: 0;
-              right: 0;
-              @include max(400px) {
-                bottom: 0;
-                top: 0;
+        & .container {
+          height: 100%;
+        }
+        & .list-box {
+          @include flex();
+          align-items: center;
+          padding-top: 120px;
+          & .list-left {
+            position: relative;
+            text-align: center;
+            width: 50%;
+            & span.banner-img {
+              position: relative;
+              font-size: 36px;
+              font-weight: 500;
+              margin-bottom: 20px;
+              &::before {
+                content: "";
+                display: block;
+                width: 20px;
+                height: 24px;
+                position: absolute;
+                right: -10px;
+                top: -5px;
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-image: url("/assets/img/trangchu/banner2-top.svg");
               }
-              h3 {
+            }
+            p {
+              &:nth-child(2) {
+                font-size: 40px;
+                font-weight: 700;
+                margin-bottom: 10px;
+                position: relative;
+                background: -webkit-linear-gradient(#1d3a89, #2f7dff, #72a7ff);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                &::after {
+                  content: "";
+                  display: block;
+                  width: 232px;
+                  height: 38px;
+                  margin: auto;
+                  background-repeat: no-repeat;
+                  background-size: contain;
+                  background-image: url("/assets/img/trangchu/banner2-center.png");
+                }
+              }
+              &:nth-child(3) {
                 font-size: 32px;
-                line-height: 40px;
-                text-align: center;
-                color: #ffffff;
-                font-weight: 500;
-                @include max(1024px) {
-                  font-size: 28px;
-                }
-                @include max(600px) {
-                  font-size: 18px;
-                }
+                font-weight: 700;
+                color: #405261;
+                margin-bottom: 20px;
               }
+            }
+            a {
+              color: #fff;
+              font-weight: 400;
+              padding: 10px 50px;
+              border-radius: 4px;
+              background: $color-first;
+            }
+          }
+          & .list-right {
+            width: 50%;
+            position: relative;
+            & .vpop {
+              position: relative;
+              img {
+                position: relative;
+                cursor: pointer;
+                margin: 0 auto;
+                max-width: 400px;
+                max-height: 240px;
+              }
+              &::before {
+                content: "";
+                width: 260px;
+                height: 146px;
+                display: block;
+                position: absolute;
+                top: -130px;
+                right: -35px;
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-image: url("/assets/img/trangchu/banner2-top-video.svg");
+              }
+              &::after {
+                content: "";
+                width: 68px;
+                height: 46px;
+                display: block;
+                position: absolute;
+                bottom: -8px;
+                z-index: -1;
+                left: 40px;
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-image: url("/assets/img/trangchu/banner2-bottom.svg");
+              }
+            }
+            #video-popup-container {
+              display: none;
+              position: fixed;
+              z-index: 996;
+              width: 60%;
+              left: 50%;
+              margin-left: -30%;
+              top: 20%;
+              background-color: #fff;
+            }
+
+            #video-popup-close {
+              cursor: pointer;
+              position: absolute;
+              right: -10px;
+              top: -10px;
+              z-index: 998;
+              width: 25px;
+              height: 25px;
+              border-radius: 25px;
+              text-align: center;
+              font-size: 12px;
+              background-color: #000;
+              line-height: 25px;
+              color: #fff;
+            }
+
+            #video-popup-iframe-container {
+              position: absolute;
+              z-index: 997;
+              width: 100%;
+              padding-bottom: 56.25%;
+              border: 2px solid #000;
+              border-radius: 2px;
+              background-color: #000;
+            }
+
+            #video-popup-iframe {
+              z-index: 999;
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              left: 0;
+              top: 0;
+              background-color: #000;
+            }
+
+            #video-popup-overlay {
+              display: none;
+              position: fixed;
+              z-index: 995;
+              top: 0;
+              background-color: #000;
+              opacity: 0.8;
+              width: 100%;
+              height: 100%;
+            }
+
+            #video-popup-close:hover {
+              color: #de0023;
             }
           }
         }
-        &.slide-three {
-          .banner-content-title {
-            top: 15%;
-            left: unset;
-            bottom: unset;
-            width: 75%;
-            margin: auto;
+      }
+      & .list-wrap {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        background: #f9fafa;
+        & .banner-partner {
+          padding: 12px 0;
+          & .partner-text {
+            text-align: center;
+            margin-bottom: 12px;
+            p {
+              font-size: 16px;
+              font-weight: 400;
+              color: #738493;
+              > span {
+                color: #000;
+                font-size: 28px;
+                font-weight: 600;
+              }
+            }
+          }
+          & .partner-logo {
+            @include mid-flex();
+            gap: 40px;
+            img {
+              width: auto;
+            }
           }
         }
       }
-    }
-    &.product-banner {
-      & .banner-content-title {
-        margin: auto;
-        bottom: unset;
-        transform: translate(0%, 30%);
+      & .banner-content {
+        &-img {
+          padding-top: 0;
+        }
+        &-title {
+          position: relative;
+          height: calc(100vh - 60px);
+        }
       }
     }
   }
@@ -60,7 +217,7 @@
     position: relative;
     &-img {
       position: relative;
-      padding-top: calc((780 / 1728) * 100%);
+      padding-top: calc((780 / 1728) * 110%);
       overflow: hidden;
       .img {
         animation: zoomout 3s linear;
@@ -72,248 +229,8 @@
       left: 0;
       right: 0;
       bottom: 0;
-      @include flex();
-      flex-direction: column;
-      justify-content: center;
-      @include max(1100px) {
-        top: 0;
-      }
-      .animation-effect {
-        position: absolute;
-        top: 65px;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        @include max(1200px) {
-          top: 42px;
-        }
-        @include max(1024px) {
-          top: 40px;
-        }
-        @include max(550px) {
-          top: 35px;
-        }
-        @include max(500px) {
-          top: 12px;
-        }
-        & .logo {
-          &-img {
-            @include flex();
-            align-items: center;
-            &.effect-one {
-              padding-bottom: 35px;
-              @include max(1024px) {
-                padding-bottom: 18px;
-              }
-              @include max(500px) {
-                padding-bottom: 10px;
-              }
-              img {
-                width: 146px;
-                animation: drift 12s linear infinite;
-                @include max(600px) {
-                  width: 106px;
-                }
-                @include max(500px) {
-                  width: 50px;
-                }
-                &:nth-child(1) {
-                  margin-right: 100px;
-                  @include max(600px) {
-                    margin-right: 60px;
-                  }
-                  @include max(500px) {
-                    margin-right: 40px;
-                  }
-                }
-                &:nth-child(2) {
-                  margin-right: 150px;
-                  @include max(600px) {
-                    margin-right: 90px;
-                  }
-                  @include max(500px) {
-                    margin-right: 70px;
-                  }
-                }
-                &:nth-child(3) {
-                }
-              }
-            }
-            &.effect-two {
-              padding-bottom: 27px;
-              @include max(500px) {
-                padding-bottom: 10px;
-              }
-              img {
-                animation: drift 14s linear infinite;
-                &:nth-child(1) {
-                  width: 230px;
-                  margin-right: 100px;
-                  @include max(600px) {
-                    width: 190px;
-                    margin-right: 60px;
-                  }
-                  @include max(550px) {
-                    width: 150px;
-                  }
-                  @include max(500px) {
-                    width: 80px;
-                  }
-                }
-                &:nth-child(2) {
-                  width: 85px;
-                  margin-right: 200px;
-                  @include max(600px) {
-                    width: 45px;
-                    margin-right: 160px;
-                  }
-                  @include max(500px) {
-                    width: 40px;
-                    margin-right: 100px;
-                  }
-                }
-                &:nth-child(3) {
-                  width: 130px;
-                  margin-right: 100px;
-                  @include max(550px) {
-                    width: 100px;
-                  }
-                  @include max(500px) {
-                    width: 60px;
-                  }
-                }
-                &:nth-child(4) {
-                  width: 130px;
-                  @include max(550px) {
-                    width: 100px;
-                  }
-                  @include max(500px) {
-                    width: 80px;
-                  }
-                }
-              }
-            }
-            &.effect-three {
-              padding-bottom: 70px;
-              animation: drift 16s linear infinite;
-              @include max(1024px) {
-                padding-bottom: 50px;
-              }
-              @include max(820px) {
-                padding-bottom: 15px;
-              }
-              img {
-                width: 65px;
-                @include max(500px) {
-                  margin-right: 80px;
-                }
-                &:nth-child(1) {
-                  margin-right: 100px;
-                }
-                &:nth-child(2) {
-                  margin-right: 100px;
-                }
-                &:nth-child(3) {
-                  margin-right: 100px;
-                }
-                &:nth-child(4) {
-                }
-              }
-              animation: drift 16s linear infinite;
-            }
-            &.effect-four {
-              width: 170px;
-              padding-bottom: 12px;
-              @include max(550px) {
-                width: 120px;
-              }
-              @include max(500px) {
-                width: 80px;
-              }
-              img {
-                animation: drift 18s linear infinite;
-                &:nth-child(1) {
-                  margin-right: 100px;
-                }
-                &:nth-child(2) {
-                  width: 220px;
-                  margin-right: 120px;
-                  @include max(550px) {
-                    width: 150px;
-                  }
-                  @include max(500px) {
-                    width: 100px;
-                  }
-                }
-                &:nth-child(3) {
-                }
-              }
-            }
-            &.effect-five {
-              img {
-                animation: drift 20s linear infinite;
-                &:nth-child(1) {
-                  width: 170px;
-                  margin-right: 400px;
-                  @include max(820px) {
-                    margin-right: 200px;
-                  }
-                  @include max(550px) {
-                    width: 120px;
-                  }
-                  @include max(500px) {
-                    width: 80px;
-                  }
-                }
-                &:nth-child(2) {
-                  width: 260px;
-                  @include max(550px) {
-                    width: 200px;
-                  }
-                  @include max(500px) {
-                    width: 150px;
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-    &-text {
-      h1 {
-        color: #fff;
-        font-size: 3.4375rem;
-        text-transform: uppercase;
-        text-align: center;
-        margin-bottom: 5rem;
-        @include max(1100px) {
-          font-size: 40px;
-          margin-bottom: 3rem;
-        }
-        @include max(820px) {
-          font-size: 30px;
-        }
-        @include max(600px) {
-          font-size: 20px;
-          margin-bottom: 2rem;
-        }
-      }
-      p {
-        color: #fff;
-        font-size: 2rem;
-        text-align: center;
-        font-weight: 400;
-        @include max(1100px) {
-          font-size: 30px;
-        }
-        @include max(820px) {
-          font-size: 20px;
-        }
-        @include max(600px) {
-          font-size: 14px;
-        }
-      }
+      width: 100%;
+      display: block;
     }
   }
 }
