--- a/scss/layout/_solution.scss
+++ b/scss/layout/_solution.scss
@@ -117,13 +117,11 @@
         content: "";
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 5%;
         bottom: -50px;
-        left: 0;
+        left: -2px;
         border: 2px dashed #a0a0a0;
         border-top: transparent;
-        border-left: transparent;
-        border-right: transparent;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
       }
@@ -168,13 +166,11 @@
         content: "";
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 5%;
         bottom: -50px;
-        left: 0;
+        left: -2px;
         border: 2px dashed #a0a0a0;
         border-top: transparent;
-        border-left: transparent;
-        border-right: transparent;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
       }
