--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -52,7 +52,7 @@
                   margin: auto;
                   background-repeat: no-repeat;
                   background-size: contain;
-                  background-image: url("/assets/img/trangchu/banner2-center.png");
+                  background-image: url("../assets/img/trangchu/banner2-center.png");
                 }
               }
               &:nth-child(3) {
@@ -92,7 +92,7 @@
                 right: -35px;
                 background-repeat: no-repeat;
                 background-size: contain;
-                background-image: url("/assets/img/trangchu/banner2-top-video.svg");
+                background-image: url("../assets/img/trangchu/banner2-top-video.svg");
               }
               &::after {
                 content: "";
@@ -105,7 +105,7 @@
                 left: 40px;
                 background-repeat: no-repeat;
                 background-size: contain;
-                background-image: url("/assets/img/trangchu/banner2-bottom.svg");
+                background-image: url("../assets/img/trangchu/banner2-bottom.svg");
               }
             }
             #video-popup-container {
